Fix truncate of trigger field in alert data table

--- a/src/app/alerts/alerts.component.scss
+++ b/src/app/alerts/alerts.component.scss
@@ -24,3 +24,10 @@
     padding: 5px;
   }
 }
+
+.truncate {
+    width: 75%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
